tests/parser/tests/cases/should_fail/double_comma_in_function_call/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:10
1 |   l := f(a,,);
  |            ^ here
  = note: expected an expression, however received a `,`.
